[metadata]
name = placeload
author = Chris Dent
author-email = cdent@anticdent.org
summary = Async create many resource providers
description-file = README.rst
license = Apache-2
home-page = https://github.com/cdent/placeload
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    placeload

[entry_points]
console_scripts =
    placeload = placeload:run

[bdist_wheel]
universal=1
